<resources>
    <string name="app_name">Just Java</string>

    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
</resources>
